--- a/main/assets/css/registration-drive/style.css
+++ b/main/assets/css/registration-drive/style.css
@@ -65,7 +65,13 @@
   justify-content: center;
   align-items: center;
 }
-
+#footer{
+  background: #2BAE66FF;
+    padding: 0 0 25px 0;
+    color: black;
+    font-size: 20px;
+    margin-top: 15px;
+}
 .landing button {
   overflow: hidden;
   position: relative;
